--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -90,7 +90,7 @@
     <div style="margin-left:4rem;pointer-events:auto;height:1.5rem;" id="testDiv">Total: {{maxCount}} Records</div>
     <table id="projectTable">
         <tr><td>Account</td><td>Project name</td>
-            <td>priority</td><td>schedule</td><td>product</td><td>MP</td><td>owner</td><td>status</td><td>established</td></tr>
+            <td>priority</td><td>schedule</td><td>product</td><td>Maintenance</td><td>owner</td><td>status</td><td>established</td></tr>
         <tr ng-repeat="entry in contents.entries"
             ng-mouseover="hoverPlink($event,true)"
             ng-mouseleave="hoverPlink($event,false)"
@@ -101,7 +101,7 @@
                 <td>{{entry.priority}}</td>
                 <td>{{entry.schedule | date:"&y/&m/&d"}}</td>
                 <td>{{entry.delivery.description}}</td>
-                <td>{{entry | MP}}</td>
+                <td style="text-align:center;"><span style="background:green;border-radius:5px;font-weight:bold;padding:3px;color:white;font-size:0.8rem;">YES</span></td>
                 <td>{{entry.owner.name }} </td>
                 <td>{{entry.status | status }} </td>
                 <td>{{entry.date | date:'&y/&m/&d'}}</td>
@@ -165,7 +165,7 @@
                         <option value="1">business</option>
                         <option value="2">development</option>
                         <option value="3">delivery</option>
-                        <option value="4">maintenance</option>
+                        <option value="4">MP</option>
                     </select>
                 </td></tr>
                 <tr><td>备注</td><td>
