fix the maintenance status

--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -190,7 +190,7 @@
                 <option value="1">business</option>
                 <option value="2">development</option>
                 <option value="3">delivery </option>
-                <option value="4">maintenance</option>
+                <option value="4">MP</option>
                 <option value="7">mass production</option>
             </select>
         </div>
