update tasks system

--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -209,7 +209,7 @@
         </div>
         <textarea ng-model="commentSubmit.contents" ng-disabled="!updatable()"></textarea>
         <div style="display:flex;flex-direction:row;">
-            <button id="submitButton" ng-click="submitComment()" ng-disabled="!updatable()">提交</button>
+            <button class="submitButton" ng-click="submitComment()" ng-disabled="!updatable()">提交</button>
         </div>
     </div>
 
