--- a/public/css/general.css
+++ b/public/css/general.css
@@ -555,3 +555,13 @@ body{
     background:rgba(211,211,211,0.4);
     cursor:pointer;
 }
+
+.submitButton{
+    margin-left:auto;
+    margin-top:0.8rem;
+    margin-right:2rem;
+    padding:5px;
+    padding-left:0.5rem;
+    padding-right:0.5rem;
+    border-radius:5px;
+}
