--- a/public/css/general.css
+++ b/public/css/general.css
@@ -545,10 +545,9 @@ body{
 }
 
 .backGrayBtn{
-    border-radius:5px;
+    border:solid 1px rgba(215,215,215,1);
     background:rgba(1,1,1,0);
     transition:background 0.1s;
-
 }
 
 .backGrayBtn:hover{
