--- a/view/taskManager.html
+++ b/view/taskManager.html
@@ -221,8 +221,8 @@
         max-width:18rem;
     }
     .dateInfo{
-        max-width:6.5rem;
-        min-width:6.5rem;
+        max-width:4.5rem;
+        min-width:4.5rem;
     }
 </style>
 <body ng-app="dashboard"
@@ -272,12 +272,13 @@
         <div id="main_records" ng-controller="entryCon">
             <table class="entryTable">
             <tr style="font-weight:bold;">
-                <td class="dateInfo">Submitted On</td>
-                <td  class="dateInfo">Due On</td>
-                <td  >Project</td>
+                <td class="dateInfo">Submitted</td>
+                <td  class="dateInfo">Due</td>
+                <td>Account</td>
+                <td>Project</td>
                 <td>Version</td>
                 <td>Description</td>
-                <td  class="dateInfo">Updated On</td>
+                <td  class="dateInfo">Updated</td>
                 <td>Log</td>
                 <td>product</td>
             </tr>
@@ -288,11 +289,12 @@
                 task-status schedule="{{task.schedule}}" status="{{task.status}}">
                 <td class="dateInfo">{{task.createdAt | date:"&y/&m/&d"}}</td>
                 <td class="dateInfo">{{task.dueOn | date:"&y/&m/&d"}}</td>
-                <td>{{task.project | objectify}}</td>
-                <td class="dateInfo">{{task.version | objectify}}</td>
+                <td class="listInfo" info-list info="{{task.account}}"></td>
+                <td class="listInfo" info-list info="{{task.project}}"></td>
+                <td class="dateInfo" info-list info="{{task.version}}" ></td>
                 <td class="descInfo">{{task.description}}</td>
                 <td>{{task.updatedAt | date:"&y/&m/&d"}}</td>
-                <td class="descInfo" log-analysis logs="{{task.log}}" style="overflow:auto;max-width:12rem;min-width:16rem;"></td>
+                <td class="descInfo" log-analysis logs="{{task.log}}" style="overflow:auto;max-width:12rem;min-width:16rem;font-size:0.85rem;"></td>
                 <td>{{task.product | productinfo}}</td>
             </tr>
             </table>
