missing item for updating status

--- a/view/taskInfo.html
+++ b/view/taskInfo.html
@@ -122,7 +122,7 @@
             <div style="margin-left:4rem;">schedule：</div>
             <input ng-disabled="!updatable(1)" type="date" id="commentTime">
             <div style="margin-left:4rem;">status：</div>
-            <select ng-disabled="!updatable(1)" ng-model="taskStatus">
+            <select ng-disabled="!updatable(1)" ng-model="status">
                 <option value="0">Verifying</option>
                 <option value="1">Engineer Assigned</option>
                 <option value="2">QA</option>
