--- a/public/css/general.css
+++ b/public/css/general.css
@@ -455,7 +455,7 @@ body{
 
 .header_button:hover{
     background:rgba(215,215,215,0.4);
-    color:rgba(152,75,67,1);
+    color: rgba(152,75,67,1);
     border: solid 1px rgba(152,75,67,1);
     cursor:pointer;
 }
@@ -498,18 +498,18 @@ body{
 }
 
 
-#filterBoard>button{
+.filterBoard>button{
     height:2rem;
     line-height:2rem;
 }
 
-#filterBoard >button i{
+.filterBoard >button i{
     margin-right:1.5rem;
     margin-left:auto;
     line-height:2rem;
 }
 
-#filterBoard >button:hover{
+.filterBoard >button:hover{
     background:rgba(152,75,67,0.4);
     color:rgba(152,75,67,1);
     cursor:pointer;
