--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -73,7 +73,7 @@
         <button ng-click="addProject()" class="addDocBtn" style="margin-right:8rem;">添加项目</button>
     </div>
     <div style="height:1rem;position:relative;">
-        <div id="filterBoard" class="float-board" index="status" style="margin-left:4rem;width:10rem;margin-top:-8px;">
+        <div class="filterBoard float-board" index="status" style="margin-left:4rem;width:10rem;margin-top:-8px;">
             <button ng-repeat="stat in status"
                     class="filter-check"
                     id="{{stat.index}}" index="selectedStatus"
